test/invalidImports/a.ts
import { IA, IB } from "./b";
import { IC } from "./c";

export class A implements IA {}
export class B implements IB {}
export class C implements IC {}
